@@ -8,13 +8,21 @@ What we wrote:
 Han-Wen Nienhuys and Jan Nieuwenhuizen, <em>LilyPond, a system for
 automated music engraving</em>. Proceedings of the XIV Colloquium on
 Musical Informatics (XIV CIM 2003), Firenze, Italy, May 2003.  (<a
-href=@IMAGES@xivcim.pdf>PDF 95k</a>)
+href="@IMAGES@xivcim.pdf">PDF 95k</a>)
 </ul>
 	
 
 What others wrote:
 
 <ul>
+
+<li>
+  Dave Phillips wrote an introductory article for Linux Journal <em>At
+  the sounding edge: LilyPond</em>, parts
+
+  <a href="http://www.linuxjournal.com/article.php?sid=7657">one</a>
+  and 
+  <a href="http://www.linuxjournal.com/article.php?sid=7719">two</a>.
 
 <li>
 A French article on the LilyPond 2.2 release appeared on <a
