@@ -1,3 +1,7 @@
+2004-09-02  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/about/pubs.html (href): Add Dave Phillips articles.
+
 2004-09-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/index.html: Spell LilyPond as LilyPond.
